Se refinan implementaciones